# SoftUni-CPP-Advanced

./: .gitignore  CMakeLists.txt  README.md
01. C++ Pointers and References/: 01. Test.txt
01. C++ Pointers and References/Demos/: 01. ReferencesModifyingParameters.cpp  04. ReferenceLimitations.cpp  05. GettingAddressesInCpp.cpp
01. C++ Pointers and References/Exercises/01. FollowPointers/: Node.h  Task.txt
01. C++ Pointers and References/Exercises/E1. FollowPointers/: FollowPointers.h  main.cpp
01. C++ Pointers and References/Homework/01. TryParse/: Main.cpp  TryParse-Author's.h  TryParse.h
01. C++ Pointers and References/Homework/02. Find/: 02. Find.docx  Find.h
01. C++ Pointers and References/Homework/04. Profits/: ProfitReport.h  ProfitsMain.cpp
01. C++ Pointers and References/Homework/05. Memory/: 05. Memory.docx  CompanyMemoryUtils.h
01. Pointers and References/Homework/01. TryParse/: 01. TryParse.docx
01. Pointers and References/Homework/02. Find/: Main.cpp
01. Pointers and References/Homework/03. Order/: 03. Order.docx  OrderMain.cpp  OrderedInserter.h
01. Pointers and References/Homework/04. Profits/: 04. Profits.docx
01. Pointers and References/Homework/05. Memory/: Company.h  CompanyMemoryUtils-Author's.h  MemoryMain.cpp
02. Memory Management/: 02. Test.txt
02. Memory Management/02. Exercises/E1.Filter/: Filter.cpp
02. Memory Management/02. Homework/03. Make Company/: 03. MakeCompany.docx
02. Memory Management/Demos/: 02. VoidPointer.cpp
03. Exercises on Pointers, References and Dynamic Memory/01. Sort/: 01. Sort.docx  SortMain.cpp
03. Exercises on Pointers, References and Dynamic Memory/02. Sort Pointers/: 02. SortPointers.docx
03. Exercises on Pointers, References and Dynamic Memory/03. Duplicates/: 03. Duplicates.docx
03. Exercises/01. Sort/: SortMain - Author's solution.cpp  SortMain.cpp
03. Exercises/02. Sort Pointers/: SortBy.h
03. Exercises/03. Duplicates/: DuplicatesMain.cpp  RemoveDuplicates - Author's solution.h  RemoveDuplicates.h
03. Exercises/04. Ranges/: 04. Ranges.docx  Ranges - Author's solution.cpp  Ranges Slow - Author's solution.cpp  RangesMain.cpp
04. Class Members/: 04. Test.txt
04. Class Members/Demos/: 01. Namespaces.cpp
05. Code Organization and Templates/: 05. Test.txt
06. Exercises/01. Echo/: 01. Echo.docx
06. Exercises/02. Notes/: 02. Notes.docx  SolfegeNoteNaming-Author's.h
06. Exercises/03. Vectors/: 03. Vectors.docx
06. Exercises/04. DivisibleBy45/: 04. DivisibleBy45.docx  DivisibleBy45Main.cpp
06. Exercises/05. Sequences/: 05. Sequences.docx  Sequence.h
07. Destructors, Constructors, Copy-Assignment/: 07. Test.txt
07. Destructors, Constructors, Copy-Assignment/Demos/: 02. CopyConstructionAndAssignment.cpp  04. DefaultAndDeletedMembers.cpp  05. ObjectCopyInCopyConstructor.cpp  07. RuleOfThree.cpp  08. PitfallMissingSelfAssignmentCheck.cpp
08. Inheritance and Polymorphism/: 08. Test.txt
08. Inheritance and Polymorphism/Demos/: 01. Inheritance.cpp  02. ProtectedMembers.cpp  03. CallingBaseConstructorsAndMethods.cpp  04. ObjectSlicing.cpp  06. BasePointerToDerived.cpp
09. Pure Virtual Members and Multiple Inheritance/: 09. Test.txt
09. Pure Virtual Members and Multiple Inheritance/Demos/: 01. InheritanceInMemory.cpp  02. PolymorphismInMemory.cpp  04. OOPInterfacesUsage.cpp  05. MultipleInheritance.cpp  07. DynamicCast.cpp
10. Exercises/01. MaxSumArray/: 01. MaxSumArray.docx  Array.h  ArrayWithPage.h
10. Exercises/02. IndexedSet/: 02. IndexedSet.docx  IndexedSet.cpp
10. Exercises/03. Extractor/: 03. Extractor.docx  BufferedExtractor.h  DigitsExtractor-Author's.h  DigitsExtractor.h  ExtractorInitialization-Author's.h  ExtractorInitialization.h  NumbersExtractor.h  QuotesExtractor-Author's.h  QuotesExtractor.h
10. Exercises/04. Word/: 04. Word.docx  AdvancedCommandInterface.h  Initialization.h
11. Exam Preparation/01. Census/: 01. Census.docx  CensusMain.cpp  City.h  CityUtils.h
11. Exam Preparation/02. Differences/: 02. Differences.docx  ChangesMain.cpp  City.h  CityDiff.h  Includes.h
11. Exam Preparation/03. Range/: 03. Range.docx  Range.cpp  Range.h  RangeMain.cpp
11. Exam Preparation/04. Calculator/: 04. Calculator.docx  CalculationEngine.h  CalculatorMain.cpp  Extensions.h  InputInterpreter.h  MultiplicationOperation.h  Operation.h
12. Exam/01. Strings/: 01. Strings.docx  DeserializeUtils.h  StringsMain.cpp
12. Exam/02. Max Reader/: Max.h  Reader.h  ReaderMain.cpp
12. Exam/03. Groups/: Group.cpp  Group.h  GroupsMain.cpp  Unit.h
12. Exam/04. Terran/: 04. Terran.docx  Barracks.h  BasicProducer.h  Controllable.h  ControllableUnit.h  Depot.h  Marine.h  Producer.h  ProducerBase.h  TerranMain.cpp  TimedBuilder.h  Unit.h  Worker.h
13. Exam Retake/01. Bytes/: BytesMain.cpp  SerializationUtils.h
13. Exam Retake/02. Iterator/: 02. Iterator.docx  IteratorMain.cpp  StreamInputIterator.h
13. Exam Retake/03. UnitPtr/: Group.cpp  Group.h  Unit.cpp  Unit.h  UnitPtr.cpp  UnitPtr.h  UnitPtrMain.cpp
13. Exam Retake/04. Nodes/: DigitsToIntNode.h  FilterNode.h  InputNode.h  Node.h  NodeBase.h  NodeNetwork.h  NodesMain.cpp  OutputNode.h  ReverseNode.h  SumNode.h
14. Exams/: README.md
14. Exams/2019.04.07/: README.md
14. Exams/2019.04.21/: README.md
14. Exams/2020.02.29/: README.md  Test Questions.adoc
14. Exams/2020.03.15/: README.md  Test Questions.adoc
14. Exams/2020.09.12/: README.md
14. Exams/2021.07.03/: 01. Format Lines.cpp  02. Ranges.cpp  03. Glitches.cpp  README.md
14. Exams/2021.07.10/: 01. Entities.cpp  02. Code.cpp  03. Data.cpp  README.md
14. Exams/2021.09.12/: CPP-OOP-Theoretical-Exam.xlsx  README.md
14. Exams/2021.09.19/: README.md
14. Exams/2022.06.18/: 01. Min-Max Temperature.cpp  02. Sum Of Odds.cpp  03. Twins.cpp  README.md
14. Exams/2022.06.25/: 01. Shopping List.cpp  02. The Matrix.cpp  03. Products and Cities.cpp  README.md
14. Exams/2023.08.20/: README.md
14. Exams/2023.08.27/: README.md
15. CPP OOP Exams/2022.09.04/: README.adoc
15. CPP OOP Exams/2022.09.11/: CPP-OOP-Theoretical-Retake-Exam.xlsx  README.adoc
(+667 files in other folders)
